# svcj

./: .env  .gitignore  README.md  Untitled.ipynb  drift_preservation_summary.md  pyproject.toml  svcj_flow_calib.pt  svcj_tcn.pt
research/: ohlcv_downloader.py
research/svcj_estimation/: best_svjd_cnn_model.pth  best_svjd_cnntransformer_model.pth  best_svjd_lstmtransformersvjd_model.pth  best_svjd_transformersvjd_model.pth  gemini.ipynb  model_train.ipynb  playground.ipynb  svcj_tcn.pt  svcj_tcn.py
runs/sv_family/: events.out.tfevents.1747944886.localhost.localdomain.31581.0  events.out.tfevents.1747945408.localhost.localdomain.32568.0  events.out.tfevents.1747945828.localhost.localdomain.33058.0  events.out.tfevents.1747946407.localhost.localdomain.35056.0  events.out.tfevents.1747946512.localhost.localdomain.35356.0  events.out.tfevents.1747946543.localhost.localdomain.35592.0  events.out.tfevents.1747946656.localhost.localdomain.36018.0  events.out.tfevents.1747946670.localhost.localdomain.36209.0  events.out.tfevents.1747946727.localhost.localdomain.36489.0  events.out.tfevents.1747946833.localhost.localdomain.39485.0  events.out.tfevents.1747946840.localhost.localdomain.39686.0  events.out.tfevents.1747950966.localhost.localdomain.44464.0  events.out.tfevents.1747951018.localhost.localdomain.45435.0  events.out.tfevents.1747951045.localhost.localdomain.45999.0  events.out.tfevents.1747951195.localhost.localdomain.46488.0  events.out.tfevents.1747952377.localhost.localdomain.49676.0  events.out.tfevents.1747952699.localhost.localdomain.50467.0  (+6 more)
(+43 files in other folders)
