[build-system]
requires       = ["uv-build>=0.7.5,<0.8.0"]
build-backend  = "uv_build"

[project]
name            = "svcj"
version         = "0.1.0"
description     = "SVCJ model implementation"
authors         = [
    { name = "Pablo Duce", email = "pduce@swissblock.net" },
]
readme          = "README.md"
requires-python = "==3.8.20"
license         = { text = "MIT" }

# Core dependencies now include the CUDA-12.1 PyTorch build by default
dependencies = [
  "hermes @ git+ssh://git@github.com/SwissblockTech/cc-ds-bt-hermes@3.0.1",
  "sbt_quant_helpers @ git+ssh://git@github.com/SwissblockTech/ds-play-pduce-sbt-quant-helpers.git@develop",
  "dynaconf==3.2.11",
  "ipython",
  "PyQt5>=5.15,<6.0",
  "pymongo[srv]",
  "ipykernel",
  "notebook",
  "torch==2.4.1",
  "tqdm",
  "tensorboard",
  "torch-tb-profiler>=0.2.0",
  "nflows"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
svcj = "svcj:main"

[tool.uv]
workspace = { exclude = ["examples", "docs"] }

# We only need the CUDA-121 index now:
[tool.uv.sources]
torch = [
  { index = "pytorch-cu121" },
]

# Declare the CUDA-12.1 index so UV knows where to pull those wheels
[[tool.uv.index]]
name     = "pytorch-cu121"
url      = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.black]
line-length = 88

[tool.mypy]
python_version      = "3.8.20"
warn_return_any     = true
warn_unused_configs = true
